ExpenceInvoice/objects/Expense_Member__c.object
<CustomObject>
    <fields>
        <fullName>Contribution_Amount__c</fullName>
        <label>Contribution Amount</label>
        <precision>10</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Expense__c</fullName>
        <label>Expense</label>
        <referenceTo>Expense__c</referenceTo>
        <relationshipLabel>Expense Members</relationshipLabel>
        <relationshipName>Expense_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Member__c</fullName>
        <label>Member</label>
        <referenceTo>Member__c</referenceTo>
        <relationshipLabel>Expense Members</relationshipLabel>
        <relationshipName>Expense_Members</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Expense Member</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ExpenseMember-{000000}</displayFormat>
        <label>Expense_Member_Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Contributed1_Amount</fullName>
        <active>true</active>
        <errorConditionFormula>Contribution_Amount__c  &gt;  (Expense__r.Amount__c - Expense__r.Total_Contributed_Amount__c)</errorConditionFormula>
        <errorMessage>Total contribution exceeds tolal event cost</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contributed_Amount</fullName>
        <active>true</active>
        <description>Contributed amount cannot be greater than total expense</description>
        <errorConditionFormula>Contribution_Amount__c  &gt;=   Expense__r.Amount__c</errorConditionFormula>
        <errorMessage>Should not be greater than the total amount</errorMessage>
    </validationRules>
</CustomObject>